Docker로 MySql 실행

--- a/.gitignore
+++ b/.gitignore
@@ -229,3 +229,5 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/kotlin,intellij+all,git,gradle,macos
+
+docker-compose.yml
